cmake_minimum_required(VERSION 3.0)
add_executable(router MessageRouter.cpp fatal.cpp)
add_executable(msgpub MessagePublisher.cpp fatal.cpp)
add_executable(msgsub MessageSubscriber.cpp MessageSubscriber.h fatal.cpp)
#add_executable(testpub testpub.cpp MessagePublisher.cpp fatal.cpp)
#add_executable(sub msg_sub.cpp)
target_link_libraries(router nanomsg pthread)
target_link_libraries(msgpub protobuf nanomsg pthread)
target_link_libraries(msgsub protobuf nanomsg pthread)
#target_link_libraries(testpub nanomsg pthread)
#target_link_libraries(sub nanomsg pthread)
